--- a/index.Rmd
+++ b/index.Rmd
@@ -1,15 +1,17 @@
 ---
 title: "Chair of Computational Modeling in Psychology"
-#image: "sigridur.jpg"
+image: "images/1CM.png"
 links:
-  - label: LMU Webpage
-    url: "https://www.psy.uni-muenchen.de/comppsy/about_us/index.html"
+  - label: '<i class="fas fa-university"></i> LMU Page'
+    url: 'https://www.psy.uni-muenchen.de/comppsy/about_us/index.html target="_blank"'
   # - label: Blog
   #   url: "https://medium.com/"
   # - label: SoundCloud
   #   url: "https://soundcloud.com/"
-  - label: Twitter
-    url: "https://twitter.com/"
+  - label: '<i class="fab fa-github"></i> Github'
+    url: 'https://github.com/ target="_blank"' 
+  - label: '<i class="fab fa-twitter"></i> Twitter'
+    url: 'https://twitter.com/ target="_blank"'
 output:
   postcards::solana
 site: distill::distill_website
