shiny app - test

--- a/index.Rmd
+++ b/index.Rmd
@@ -23,5 +23,14 @@ site: distill::distill_website
 
 ## Teaching 
 
+```{r echo=FALSE}
+library(shiny)
+knitr::include_app("https://tehilla-mechera-ostrovsky.shinyapps.io/scatter_test/?_ga=2.28094076.1162650381.1683277660-2121495814.1683277660", 
+  height = "600px")
+
+```
+
+
+
 ## Blogs
 
