--- a/about.Rmd
+++ b/about.Rmd
@@ -4,7 +4,12 @@ description: |
   Some additional details about the website
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+```{r}
+library(shiny)
+```
+
+
+```{r, layout="l-screen-inset"}
+htmltools::tags$iframe(src = "<RSCONNECT URL>", height = "600px", width = "100%", `data-external` = "1")
 ```
 
