--- a/about.Rmd
+++ b/about.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "About this site"
 description: |
-  Some additional details about the website
+  Teaching basics in Statistics
 ---
+
 
