--- a/Blog.Rmd
+++ b/Blog.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Blog Posts on contreversial topics 😏"
-description: |
-  
+title: "Blog Posts on Contreversial Topics"
+description: | 
+  😱
 author:
   - name: Chris Donkin vs. Nathan Evans 
     #url: 
@@ -11,6 +11,7 @@ date: "`r Sys.Date()`"
 output: distill::distill_article
 ---
 
+## Klaus Fiedler, editor in chief of the journal *Perspectives on Psychological Science*: An incompetent editor or a shameless racist?
 
 
 
